@@ -1,11 +1,12 @@
 Package: effects
 Version: 2.1-1
-Date: 2012/02/15
+Date: 2012/03/08
 Title: Effect Displays for Linear, Generalized Linear, Multinomial-Logit, Proportional-Odds Logit Models and mixed-effects models
 Author: John Fox <jfox@mcmaster.ca>, Sanford Weisberg, and Jangman Hong. We are grateful to Robert Andersen, David Firth, and 
   Michael Friendly, for various suggestions.
 Maintainer: John Fox <jfox@mcmaster.ca>
-Depends: R (>= 2.4.0), lattice, grid, nlme, MASS, nnet, colorspace
+Depends: R (>= 2.4.0), lattice, grid, MASS, nnet, colorspace
+Suggests: nlme, lme4
 LazyLoad: yes
 LazyData: yes
 Description: 
